[B][COLOR gold]v4.10.08[/COLOR][/B]
- Added option to hide spoilers for unwatched episodes (plot and/or thumb)
- Remove uncached torrents from sources list when autoplay is on,
  regardless of setting
- Other minor fixes

[B][COLOR gold]v4.10.07[/COLOR][/B]
- Cacheing fixes

[B][COLOR gold]v4.10.06[/COLOR][/B]
- Minor fixes

[B][COLOR gold]v4.10.05[/COLOR][/B]
- Alternative (faster) database for Netflix episode ids
- Adjust to Rd API changes that removed their 100-hashes-per-request limit
  upon magnet instant availability check

[B][COLOR gold]v4.10.04[/COLOR][/B]
- Fixed Netflix official provider returning show id instead of episode id
- Bookmarks database initialisation fix
- Duplicate magnet hashes filtering tweak

[B][COLOR gold]v4.10.03[/COLOR][/B]
- Official providers cleanup
- Library scraper transfered from Oathscrapers to built-in

[B][COLOR gold]v4.10.02[/COLOR][/B]
- Added Paramount+ on supported official providers

[B][COLOR gold]v4.10.01[/COLOR][/B]
- Added Hulu on supported official providers
- Some cleanup

[B][COLOR gold]v4.10.00[/COLOR][/B]
- Added official streams providers.
  For these providers to work, their equivalent Kodi add-on is required
  to be installed and configured (with active accounts etc).
  (Thanks to a fellow veteran add-on developer for the suggestion and help)
- Orion scraper now moved onto the Oathscrapers package - enable and
  configure it there

[B][COLOR gold]v4.03.09[/COLOR][/B]
- Cleanup unused modules
- Furk fixes/tweaks

[B][COLOR gold]v4.03.08[/COLOR][/B]
- Added support for Easynews

[B][COLOR gold]v4.03.07[/COLOR][/B]
- Fixed non-en language title/aliases parsing for scraping
- Fixed sources sorting issue

[B][COLOR gold]v4.03.06[/COLOR][/B]
- Fixed some performance issues with scraping

[B][COLOR gold]v4.03.05[/COLOR][/B]
- Sources appearance/filtering tweaks

[B][COLOR gold]v4.03.04[/COLOR][/B]
- Code cleanup
- Minor cosmetic fix

[B][COLOR gold]v4.03.03[/COLOR][/B]