@@ -17,7 +17,6 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 """
 
-from resources.lib.modules import log_utils
 
 try:
     import resolveurl
@@ -28,7 +27,7 @@ try:
         # Support Rapidgator accounts! Unfortunately, `sources.py` assumes that rapidgator.net is only ever
         # accessed via a debrid service, so we add rapidgator as a debrid resolver and everything just works.
         # As a bonus(?), rapidgator links will be highlighted just like actual debrid links
-        debrid_resolvers = [resolver() for resolver in resolveurl.relevant_resolvers(order_matters=True,include_universal=False) if 'rapidgator.net' in resolver.domains]
+        debrid_resolvers = [resolver() for resolver in resolveurl.relevant_resolvers(order_matters=True, include_universal=False) if 'rapidgator.net' in resolver.domains]
 
 except:
     debrid_resolvers = []
@@ -46,5 +45,6 @@ def resolver(url, debrid):
         stream_url = debrid_resolver.get_media_url(_host, _media_id)
         return stream_url
     except:
+        from resources.lib.modules import log_utils
         log_utils.log('%s Resolve Failure' % debrid, 1)
         return None
